// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Table Element Prop - borderless: true 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--borderless e-bolt-table--side-headers">
    <tbody>
      <tr>
        <th scope="row">
          Row 1
        </th>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 2
        </th>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 3
        </th>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - caption 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric">
    <caption>
      This is a caption
    </caption>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: first 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--fixed-width-columns--first">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: first-two 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--fixed-width-columns--first-two">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: none 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--fixed-width-columns--none">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: second 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--fixed-width-columns--second">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_table: true 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--fixed-width-table">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - format items: numeric 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--side-headers">
    <thead>
      <tr>
        <td>
        </td>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">
          Row 1
        </th>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 2
        </th>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 3
        </th>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Footer
        </th>
        <td>
          FC1
        </td>
        <td>
          FC2
        </td>
        <td>
          FC3
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - format items: regular 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--side-headers">
    <thead>
      <tr>
        <td>
        </td>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">
          Row 1
        </th>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 2
        </th>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 3
        </th>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Footer
        </th>
        <td>
          FC1
        </td>
        <td>
          FC2
        </td>
        <td>
          FC3
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element default 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric">
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element footer table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--side-headers">
    <thead>
      <tr>
        <td>
        </td>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">
          Row 1
        </th>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 2
        </th>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 3
        </th>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Footer
        </th>
        <td>
          FC1
        </td>
        <td>
          FC2
        </td>
        <td>
          FC3
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element side header table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric e-bolt-table--side-headers">
    <tbody>
      <tr>
        <th scope="row">
          Row 1
        </th>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 2
        </th>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <th scope="row">
          Row 3
        </th>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element top header table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric">
    <thead>
      <tr>
        <th scope="col">
          Column 1
        </th>
        <th scope="col">
          Column 2
        </th>
        <th scope="col">
          Column 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          R1C1
        </td>
        <td>
          R1C2
        </td>
        <td>
          R1C3
        </td>
      </tr>
      <tr>
        <td>
          R2C1
        </td>
        <td>
          R2C2
        </td>
        <td>
          R2C3
        </td>
      </tr>
      <tr>
        <td>
          R3C1
        </td>
        <td>
          R3C2
        </td>
        <td>
          R3C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
